# GFlowNet-CombOpt

./: pyproject.toml
gflownet/: algorithm.py  benchmark.py  logits.py  main.py  reference_alg.py  refrence_alg.py  regularized_main.py  sample.py  sample_features.py  sample_fixed_start.py  test_coherence.py  util.py
gflownet/configs/: main.yaml
gflownet/ref_alg/: maxcut_greedy.py  mds_greedy.py  mis_greedy.py  mis_greedy_features.py  mis_heuristic.py  mis_local_improvement.py
