[tool.poetry]
package-mode = false
name = "gflownet-combopt"
version = "0.1.0"
description = ""
authors = ["okcze <piotr.phitz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
torch = "2.5.0"
hydra-core = "1.1.0"
ipdb = "^0.13.13"
einops = "^0.8.0"
hydra-submitit-launcher = "^1.2.0"
submitit = "^1.5.2"
tqdm = "^4.67.1"
matplotlib = "^3.9.3"
dgl = "1.1.2"
networkx = "2.8.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
